--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2",
     "path": "^0.12.7",
+    "pug": "^3.0.3",
     "xss-clean": "^0.1.4"
   }
 }
